@startuml
'https://plantuml.com/class-diagram

package entities {
class User {
- int userId
- String firstName
- String lastName
- String email
- String password
- String role
}

class Customer extends User {
- double balance
}

class Admin extends User {
}

class CupcakeComponent {
- int componentId
- String name
- double price
}

class Topping extends CupcakeComponent {
}

class Bottom extends CupcakeComponent {
}

class Cupcake {
- Topping topping
- Bottom bottom
+ double getTotalPrice()
+ String getFullName()
}

class OrderLine {
- Cupcake cupcake
- int quantity
}

class ShoppingCart {
- List<OrderLine>
}

class Order {
- int orderId
- int userId
- LocalDate timestamp
- ShoppingCart shoppingCart
}

CupcakeComponent --* Cupcake
Cupcake --* OrderLine
OrderLine --* ShoppingCart
ShoppingCart --o Order
}

@enduml